<?xml version="1.0"?>
<package format="3">
  <name>realsense_ros2</name>
  <version>0.0.0</version>

  <description>The hardware interface to the realsense library</description>
  <author email="luz.martinez@tum.de">Luz Martinez</author>
  <maintainer email="luz.martinez@tum.de">Luz Martinez</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>realsense</build_depend>
  <build_depend>Eigen3</build_depend>

  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>realsense</build_export_depend>
  <build_export_depend>Eigen3</build_export_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>realsense</exec_depend>
  <exec_depend>Eigen3</exec_depend>
    
  <export>
  </export>
</package>
